Fix some positioning issues with wrapped media/widgets

--- a/system/application/views/melons/cantaloupe/css/common.css
+++ b/system/application/views/melons/cantaloupe/css/common.css
@@ -629,9 +629,6 @@ a:hover { text-decoration: underline; }
 	margin-right: 4.8rem;
 }
 
-.wrapped_slot.full_width, .mediainfo.full_width{
-	margin-left: -7.2rem;
-}
 
 .wrapped_slot.no_margin>.mediaelement, .mediainfo.no_margin>.widgetContainer{
 	margin: 1rem 0;
@@ -661,6 +658,8 @@ a:hover { text-decoration: underline; }
 
 .body_copy.mediainfo {
 	margin-bottom:2.4rem;
+	padding-left: 0;
+	padding-right: 0;
 }
 
 .mediaContainer,.mediaElementFooter {
